server added for socket and listing of users and joining user to common  roomId completed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-editor",
+  "name": "server",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -41,5 +42,9 @@
   },
   "devDependencies": {
     "@types/codemirror": "^5.60.15"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
